...
import Foundation

// Dummy Ojbect for using in UI Testing
class DummyAuthManager: AuthManagerProtocol {
    
    // user auth dict [Email: Password]
    private var userDict = ["DemoUser@toremove.com": "MockupPassword"]
    
    // userID of the login user, should be nil if there is no user login
    // userID will be the same as email
    public var userID: String?
    public var delegate: AuthManagerDelegate?
    
...
